# Icarus

./: Cargo.toml  README.md  build.rs  config.toml
icarus-shaders/: Cargo.toml
icarus-shaders/src/: lib.rs
sdl3/: Cargo.toml
sdl3-sys/: Cargo.toml  build.rs
sdl3-sys/src/: lib.rs  sdl_main.rs
sdl3/sdl3-macros/: Cargo.toml
sdl3/sdl3-macros/src/: entry.rs  lib.rs
sdl3/sdl3-sys/: Cargo.toml  wrapper_main.h
sdl3/sdl3-sys/src/: lib.rs
sdl3/src/: lib.rs
src/: app.rs  consts.rs  ecs.rs  game.rs  lib.rs  main.rs  render.rs  sdl.rs  vulkan.rs
src/app/: capabilities.rs  config.rs  core.rs  error.rs  game.rs  render_pass.rs  resources.rs  settings.rs  shaders.rs  utils.rs
src/app/resources/: utils.rs
src/ecs/: core.rs  test.rs  traits.rs
src/game/: error.rs
src/grid/: axial_hex.rs  mod.rs
src/sdl/: error.rs
