cargo-features = ["edition2024"]

[package]
name = "icarus"
version = "0.1.0"
edition = "2024"

[lib]


[dependencies]
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
frunk = { version = "0.4.3", features = ["std"] }
frunk_core = "0.4.3"
nalgebra = "0.33.2"
rayon = "1.10.0"
thiserror = "2.0.9"
winit = "0.30.6"
