cargo-features = ["edition2024"]

[package]
name = "icarus"
version = "0.1.0"
edition = "2024"

[lib]


[dependencies]
frunk = { version = "0.4.3", features = ["std"] }
frunk_core = "0.4.3"
log = "0.4.22"
modelz = "0.1.5"
nalgebra = "0.33.2"
rayon = "1.10.0"
thiserror = "2.0.9"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
winit = { version = "0.30.6", features = ["rwh_05"] }

[build-dependencies]
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git" }
